docs/version-1.11/modules/en/pages/installation-setup/installation/helm-values.adoc
= Helm Values
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-05-14
:page-revdate: {revdate}
:current-version: {page-component-version}

== Values

The `values.yaml` contains items used to tweak a deployment of this chart.

=== Cattle Settings

|===
| Key | Type | Default | Description

| `global.cattle.systemDefaultRegistry`
| string
| `""`
| Default system registry.

| `global.cattle.windowsCluster.defaultSetting.systemManagedComponentsNodeSelector`
| string
| `"kubernetes.io/os:linux"`
| Node selector for system-managed Longhorn components.

| `global.cattle.windowsCluster.defaultSetting.taintToleration`
| string
| `"cattle.io/os=linux:NoSchedule"`
| Toleration for system-managed Longhorn components.

| `global.cattle.windowsCluster.enabled`
| bool
| `false`
| Setting that allows {longhorn-product-name} UI to run on a Rancher Windows cluster.

| `global.cattle.windowsCluster.nodeSelector`
| object
| `{"kubernetes.io/os":"linux"}`
| Node selector for Linux nodes that can run user-deployed Longhorn components.

| `global.cattle.windowsCluster.tolerations`
| list
| `[{"effect":"NoSchedule","key":"cattle.io/os","operator":"Equal","value":"linux"}]`
| Toleration for Linux nodes that can run user-deployed Longhorn components.

| `global.imagePullSecrets`
| list
| `[]`
| Global override for image pull secrets for container registry.

| `global.imageRegistry`
| string
| `"docker.io"`
| Global override for container image registry.

| `global.nodeSelector`
| object
| `{}`
| Node selector for nodes allowed to run user-deployed components such as Longhorn Manager, Longhorn UI, and Longhorn Driver Deployer.

| `global.timezone`
| string
| `""`
| Set container timezone (TZ env) for all Longhorn workloads. Leave empty to use container default.

| `global.tolerations`
| list
| `[]`
| Toleration for nodes allowed to run user-deployed components such as Longhorn Manager, Longhorn UI, and Longhorn Driver Deployer.
|===

=== Network Policies

|===
| Key | Type | Default | Description

| `networkPolicies.enabled`
| bool
| `false`
| Setting that allows you to enable network policies that control access to Longhorn pods.

| `networkPolicies.type`
| string
| `"k3s"`
| Distribution that determines the policy for allowing access for an ingress. (Options: "k3s", "rke2", "rke1")
|===

=== Image Settings

|===
| Key | Type | Default | Description

| `image.csi.attacher.registry`
| string
| `""`
| Registry for the CSI attacher image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.attacher.repository`
| string
| `"longhornio/csi-attacher"`
| Repository for the CSI attacher image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.attacher.tag`
| string
| `"v4.10.0-20260428"`
| Tag for the CSI attacher image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.livenessProbe.registry`
| string
| `""`
| Registry for the CSI liveness probe image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.livenessProbe.repository`
| string
| `"longhornio/livenessprobe"`
| Repository for the CSI liveness probe image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.livenessProbe.tag`
| string
| `"v2.17.0-20260428"`
| Tag for the CSI liveness probe image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.nodeDriverRegistrar.registry`
| string
| `""`
| Registry for the CSI Node Driver Registrar image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.nodeDriverRegistrar.repository`
| string
| `"longhornio/csi-node-driver-registrar"`
| Repository for the CSI Node Driver Registrar image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.nodeDriverRegistrar.tag`
| string
| `"v2.15.0-20260428"`
| Tag for the CSI Node Driver Registrar image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.provisioner.registry`
| string
| `""`
| Registry for the CSI Provisioner image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.provisioner.repository`
| string
| `"longhornio/csi-provisioner"`
| Repository for the CSI Provisioner image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.provisioner.tag`
| string
| `"v5.3.0-20260428"`
| Tag for the CSI Provisioner image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.resizer.registry`
| string
| `""`
| Registry for the CSI Resizer image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.resizer.repository`
| string
| `"longhornio/csi-resizer"`
| Repository for the CSI Resizer image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.resizer.tag`
| string
| `"v2.0.0-20260428"`
| Tag for the CSI Resizer image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.snapshotter.registry`
| string
| `""`
| Registry for the CSI Snapshotter image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.snapshotter.repository`
| string
| `"longhornio/csi-snapshotter"`
| Repository for the CSI Snapshotter image. When unspecified, {longhorn-product-name} uses the default value.

| `image.csi.snapshotter.tag`
| string
| `"v8.4.0-20260428"`
| Tag for the CSI Snapshotter image. When unspecified, {longhorn-product-name} uses the default value.

| `image.longhorn.backingImageManager.registry`
| string
| `""`
| Registry for the Backing Image Manager image. When unspecified, {longhorn-product-name} uses the default value.

| `image.longhorn.backingImageManager.repository`
| string
| `"longhornio/backing-image-manager"`
| Repository for the Backing Image Manager image. When unspecified, {longhorn-product-name} uses the default value.

| `image.longhorn.backingImageManager.tag`
| string
| `"v1.11.2"`
| Tag for the Backing Image Manager image. When unspecified, {longhorn-product-name} uses the default value.

| `image.longhorn.engine.registry`
| string
| `""`
| Registry for the Longhorn Engine image.

| `image.longhorn.engine.repository`
| string
| `"longhornio/longhorn-engine"`
| Repository for the Longhorn Engine image.

| `image.longhorn.engine.tag`
| string
| `"v1.11.2"`
| Tag for the Longhorn Engine image.

| `image.longhorn.instanceManager.registry`
| string
| `""`
| Registry for the Longhorn Instance Manager image.

| `image.longhorn.instanceManager.repository`
| string
| `"longhornio/longhorn-instance-manager"`
| Repository for the Longhorn Instance Manager image.

| `image.longhorn.instanceManager.tag`
| string
| `"v1.11.2"`
| Tag for the Longhorn Instance Manager image.

| `image.longhorn.manager.registry`
| string
| `""`
| Registry for the Longhorn Manager image.

| `image.longhorn.manager.repository`
| string
| `"longhornio/longhorn-manager"`
| Repository for the Longhorn Manager image.

| `image.longhorn.manager.tag`
| string
| `"v1.11.2"`
| Tag for the Longhorn Manager image.

| `image.longhorn.shareManager.registry`
| string
| `""`
| Registry for the Longhorn Share Manager image.

| `image.longhorn.shareManager.repository`
| string
| `"longhornio/longhorn-share-manager"`
| Repository for the Longhorn Share Manager image.

| `image.longhorn.shareManager.tag`
| string
| `"v1.11.2"`
| Tag for the Longhorn Share Manager image.

| `image.longhorn.supportBundleKit.registry`
| string
| `""`
| Registry for the Longhorn Support Bundle Manager image.

| `image.longhorn.supportBundleKit.repository`
| string
| `"longhornio/support-bundle-kit"`
| Repository for the Longhorn Support Bundle Manager image.

| `image.longhorn.supportBundleKit.tag`
| string
| `"v0.0.84"`
| Tag for the Longhorn Support Bundle Manager image.

| `image.longhorn.ui.registry`
| string
| `""`
| Registry for the {longhorn-product-name} UI image.

| `image.longhorn.ui.repository`
| string
| `"longhornio/longhorn-ui"`
| Repository for the {longhorn-product-name} UI image.

| `image.longhorn.ui.tag`
| string
| `"v1.11.2"`
| Tag for the {longhorn-product-name} UI image.

| `image.openshift.oauthProxy.registry`
| string
| `""`
| Registry for the OAuth Proxy image. Specify the upstream image (for example, "quay.io/openshift/origin-oauth-proxy"). This setting applies only to OpenShift users.

| `image.openshift.oauthProxy.repository`
| string
| `""`
| Repository for the OAuth Proxy image. Specify the upstream image (for example, "quay.io/openshift/origin-oauth-proxy"). This setting applies only to OpenShift users.

| `image.openshift.oauthProxy.tag`
| string
| `""`
| Tag for the OAuth Proxy image. Specify OCP/OKD version 4.1 or later (including version 4.18, which is available at quay.io/openshift/origin-oauth-proxy:4.18). This setting applies only to OpenShift users.

| `image.pullPolicy`
| string
| `"IfNotPresent"`
| Image pull policy that applies to all user-deployed Longhorn components, such as Longhorn Manager, Longhorn driver, and Longhorn UI.
|===

=== Service Settings

|===
| Key | Description

| `service.manager.nodePort`
| NodePort port number for Longhorn Manager. When unspecified, {longhorn-product-name} selects a free port between 30000 and 32767.

| `service.manager.type`
| Service type for Longhorn Manager.

| `service.ui.annotations`
| Annotation for the {longhorn-product-name} UI service.

| `service.ui.labels`
|

| `service.ui.loadBalancerClass`
| Class of a load balancer implementation

| `service.ui.nodePort`
| NodePort port number for {longhorn-product-name} UI. When unspecified, {longhorn-product-name} selects a free port between 30000 and 32767.

| `service.ui.type`
| Service type for {longhorn-product-name} UI. (Options: "ClusterIP", "NodePort", "LoadBalancer", "Rancher-Proxy")
|===

=== StorageClass Settings

|===
| Key | Type | Default | Description

| `persistence.backingImage.dataSourceParameters`
| string
| `nil`
| Data source parameters of a backing image used in a Longhorn StorageClass. You can specify a JSON string of a map. (Example: `+'{\"url\":\"https://backing-image-example.s3-region.amazonaws.com/test-backing-image\"}'+`)

| `persistence.backingImage.dataSourceType`
| string
| `nil`
| Data source type of a backing image used in a Longhorn StorageClass. If the backing image exists in the cluster, {longhorn-product-name} uses this setting to verify the image. If the backing image does not exist, {longhorn-product-name} creates one using the specified data source type.

| `persistence.backingImage.enable`
| bool
| `false`
| Setting that allows you to use a backing image in a Longhorn StorageClass.

| `persistence.backingImage.expectedChecksum`
| string
| `nil`
| Expected SHA-512 checksum of a backing image used in a Longhorn StorageClass.

| `persistence.backingImage.name`
| string
| `nil`
| Backing image to be used for creating and restoring volumes in a Longhorn StorageClass. When no backing images are available, specify the data source type and parameters that {longhorn-product-name} can use to create a backing image.

| `persistence.backupTargetName`
| string
| `"default"`
| Setting that allows you to specify the backup target for the default Longhorn StorageClass.

| `persistence.dataEngine`
| string
| `"v1"`
| Setting that allows you to specify the data engine version for the default Longhorn StorageClass. (Options: `"v1"`, `"v2"`)

| `persistence.defaultClass`
| bool
| `true`
| Setting that allows you to specify the default Longhorn StorageClass.

| `persistence.defaultClassReplicaCount`
| int
| `3`
| Replica count of the default Longhorn StorageClass.

| `persistence.defaultDataLocality`
| string
| `"disabled"`
| Data locality of the default Longhorn StorageClass. (Options: `"disabled"`, `"best-effort"`)

| `persistence.defaultDiskSelector.enable`
| bool
| `false`
| Setting that allows you to enable the disk selector for the default Longhorn StorageClass.

| `persistence.defaultDiskSelector.selector`
| string
| `""`
| Disk selector for the default Longhorn StorageClass. Longhorn uses only disks with the specified tags for storing volume data. (Examples: `"nvme,sata"`)

| `persistence.defaultFsType`
| string
| `"ext4"`
| Filesystem type of the default Longhorn StorageClass.

| `persistence.defaultMkfsParams`
| string
| `""`
| mkfs parameters of the default Longhorn StorageClass.

| `persistence.defaultNodeSelector.enable`
| bool
| `false`
| Setting that allows you to enable the node selector for the default Longhorn StorageClass.

| `persistence.defaultNodeSelector.selector`
| string
| `""`
| Node selector for the default Longhorn StorageClass. {longhorn-product-name} uses only nodes with the specified tags for storing volume data. (Examples: "storage,fast")

| `persistence.disableRevisionCounter`
| string
| `"true"`
| Setting that disables the revision counter and thereby prevents {longhorn-product-name} from tracking all write operations to a volume. When salvaging a volume, {longhorn-product-name} uses properties of the volume-head-xxx.img file (the last file size and the last time the file was modified) to select the replica to be used for volume recovery.

| `persistence.migratable`
| bool
| `false`
| Setting that allows you to enable live migration of a Longhorn volume from one node to another.

| `persistence.nfsOptions`
| string
| `""`
| Set NFS mount options for Longhorn StorageClass for RWX volumes

| `persistence.reclaimPolicy`
| string
| `"Delete"`
| Reclaim policy that provides instructions for handling of a volume after its claim is released. (Options: "Retain", "Delete")

| `persistence.recurringJobSelector.enable`
| bool
| `false`
| Setting that allows you to enable the recurring job selector for a Longhorn StorageClass.

| `persistence.recurringJobSelector.jobList`
| list
| `[]`
| Recurring job selector for a Longhorn StorageClass. Ensure that quotes are used correctly when specifying job parameters. (Example: `[{"name":"backup", "isGroup":true}]`)

| `persistence.unmapMarkSnapChainRemoved`
| string
| `"ignored"`
| Setting that allows you to enable automatic snapshot removal during filesystem trim for a Longhorn StorageClass. (Options: `"ignored"`, `"enabled"`, `"disabled"`)

| `persistence.volumeBindingMode`
| string
| `"Immediate"`
| VolumeBindingMode controls when volume binding and dynamic provisioning should occur. (Options: `"Immediate"`, `"WaitForFirstConsumer"`) (Defaults to `"Immediate"`)
|===

=== CSI Settings

|===
| Key | Description

| `csi.attacherReplicaCount`
| Replica count of the CSI Attacher. When unspecified, {longhorn-product-name} uses the default value (`"3"`).

| `csi.kubeletRootDir`
| kubelet root directory. When unspecified, {longhorn-product-name} uses the default value.

| `csi.podAntiAffinityPreset`
| Configures Pod anti-affinity to prevent multiple instances on the same node. Use soft (tries to separate) or hard (must separate). When unspecified, {longhorn-product-name} uses the default value (`"soft"`).

| `csi.provisionerReplicaCount`
| Replica count of the CSI Provisioner. When unspecified, {longhorn-product-name} uses the default value (`"3"`).

| `csi.resizerReplicaCount`
| Replica count of the CSI Resizer. When unspecified, {longhorn-product-name} uses the default value (`"3"`).

| `csi.snapshotterReplicaCount`
| Replica count of the CSI Snapshotter. When unspecified, {longhorn-product-name} uses the default value (`"3"`).
|===

=== Longhorn Manager Settings

{longhorn-product-name} consists of user-deployed components (for example, Longhorn Manager, Longhorn Driver, and {longhorn-product-name} UI) and system-managed components (for example, Instance Manager, Backing Image Manager, Share Manager, CSI Driver, and Engine Image). The following settings only apply to Longhorn Manager.

|===
| Key | Type | Default | Description

| `longhornManager.log.format`
| string
| `"plain"`
| Format of Longhorn Manager logs. (Options: "plain", "json")

| `longhornManager.nodeSelector`
| object
| `{}`
| Node selector for Longhorn Manager. Specify the nodes allowed to run Longhorn Manager.

| `longhornManager.priorityClass`
| string
| `"longhorn-critical"`
| PriorityClass for Longhorn Manager.

| `longhornManager.resources`
| string
| `nil`
| Resource requests and limits for Longhorn Manager pods.

| `longhornManager.serviceAnnotations`
| object
| `{}`
| Annotation for the Longhorn Manager service.

| `longhornManager.serviceLabels`
| object
| `{}`
| 

| `longhornManager.tolerations`
| list
| `[]`
| Toleration for Longhorn Manager on nodes allowed to run Longhorn components.

| `longhornManager.updateStrategy.rollingUpdate.maxUnavailable`
| string
| `"100%"`
|
|===

=== Longhorn Driver Settings

{longhorn-product-name} consists of user-deployed components (for example, Longhorn Manager, Longhorn Driver, and {longhorn-product-name} UI) and system-managed components (for example, Instance Manager, Backing Image Manager, Share Manager, CSI Driver, and Engine Image). The following settings only apply to Longhorn Driver.

|===
| Key | Type | Default | Description

| `longhornDriver.log.format`
| string
| `"plain"`
| Format of longhorn-driver logs. (Options: "plain", "json")

| `longhornDriver.nodeSelector`
| object
| `{}`
| Node selector for Longhorn Driver. Specify the nodes allowed to run Longhorn Driver.

| `longhornDriver.priorityClass`
| string
| `"longhorn-critical"`
| PriorityClass for Longhorn Driver.

| `longhornDriver.tolerations`
| list
| `[]`
| Toleration for Longhorn Driver on nodes allowed to run Longhorn components.
|===

=== {longhorn-product-name} UI Settings

{longhorn-product-name} consists of user-deployed components (for example, Longhorn Manager, Longhorn Driver, and {longhorn-product-name} UI) and system-managed components (for example, Instance Manager, Backing Image Manager, Share Manager, CSI Driver, and Engine Image). The following settings only apply to {longhorn-product-name} UI.

|===
| Key | Type | Default | Description

| `longhornUI.affinity`
| object
| `{"podAntiAffinity":{"preferredDuringSchedulingIgnoredDuringExecution":[{"podAffinityTerm":{"labelSelector":{"matchExpressions":[{"key":"app","operator":"In","values":["longhorn-ui"]}]},"topologyKey":"kubernetes.io/hostname"},"weight":1}]}}`
| Affinity for {longhorn-product-name} UI pods. Specify the affinity you want to use for {longhorn-product-name} UI.

| `longhornUI.nodeSelector`
| object
| `{}`
| Node selector for {longhorn-product-name} UI. Specify the nodes allowed to run {longhorn-product-name} UI.

| `longhornUI.priorityClass`
| string
| `"longhorn-critical"`
| PriorityClass for {longhorn-product-name} UI.

| `longhornUI.replicas`
| int
| `2`
| Replica count for {longhorn-product-name} UI.

| `longhornUI.tolerations`
| list
| `[]`
| Toleration for {longhorn-product-name} UI on nodes allowed to run Longhorn components.
|===

=== Ingress Settings

|===
| Key | Type | Default | Description

| `ingress.annotations`
| string
| `nil`
| Ingress annotations in the form of key-value pairs.

| `ingress.enabled`
| bool
| `false`
| Setting that allows {longhorn-product-name} to generate ingress records for the {longhorn-product-name} UI service.

| `ingress.extraHosts`
| list
| `[]`
| Extra hostnames for TLS (Subject Alternative Names - SAN). Used when you need multiple FQDNs for the same ingress. Example: extraHosts:   - longhorn.example.com   - longhorn-ui.internal.local

| `ingress.host`
| string
| `"sslip.io"`
| Hostname of the Layer 7 load balancer.

| `ingress.ingressClassName`
| string
| `nil`
| IngressClass resource that contains ingress configuration, including the name of the Ingress controller. ingressClassName can replace the `kubernetes.io/ingress.class` annotation used in earlier Kubernetes releases.

| `ingress.path`
| string
| `"/"`
| Default ingress path. You can access the {longhorn-product-name} UI by following the full ingress path `{\{host}}+{\{path}}`.

| `ingress.pathType`
| string
| `"ImplementationSpecific"`
| Ingress path type. To maintain backward compatibility, the default value is `"ImplementationSpecific"`.

| `ingress.secrets`
| string
| `nil`
| Secret that contains a TLS private key and certificate. Use secrets to use your own certificates to secure ingresses.

| `ingress.secureBackends`
| bool
| `false`
| Setting that allows you to enable secure connections to the {longhorn-product-name} UI service via port 443.

| `ingress.tls`
| bool
| `false`
| Setting that allows you to enable TLS on ingress records.

| `ingress.tlsSecret`
| string
| `"longhorn.local-tls"`
| TLS secret that contains the private key and certificate to be used for TLS. This setting applies only when TLS is enabled on ingress records.
|===

=== HTTPRoute Settings

|===
| Key | Type | Default | Description

| `httproute.annotations`
| object
| `{}`
| Annotations for the HTTPRoute resource in the form of key-value pairs.

| `httproute.enabled`
| bool
| `false`
| Setting that allows {longhorn-product-name} to generate HTTPRoute records for the {longhorn-product-name} UI service using Gateway API.

| `httproute.hostnames`
| list
| `[]`
| List of hostnames for the HTTPRoute. Multiple hostnames are supported.

| `httproute.parentRefs`
| list
| `[]`
| Gateway references for HTTPRoute. Specify which Gateway(s) should handle this route.

| `httproute.path`
| string
| `"/"`
| Default path for HTTPRoute. You can access the {longhorn-product-name} UI by following the full path.

| `httproute.pathType`
| string
| `"PathPrefix"`
| Path match type for HTTPRoute. (Options: `"Exact"`, `"PathPrefix"`)
|===

=== Private Registry Settings

You can install {longhorn-product-name} in an air-gapped environment with a private registry. For more information, see the *Air Gap Installation* section of the xref:installation-setup/installation/airgapped-environment.adoc[documentation].

|===
| Key | Description

| `privateRegistry.createSecret`
| Set to `true` to automatically create a new private registry secret.

| `privateRegistry.registryPasswd`
| Password for authenticating with a private registry.

| `privateRegistry.registrySecret`
| If create a new private registry secret is true, create a Kubernetes secret with this name; else use the existing secret of this name. Use it to pull images from your private registry.

| `privateRegistry.registryUrl`
| URL of a private registry. When unspecified, {longhorn-product-name} uses the default system registry.

| `privateRegistry.registryUser`
| User account used for authenticating with a private registry.
|===

=== Metrics Settings

|===
| Key | Type | Default | Description

| `metrics.serviceMonitor.additionalLabels`
| object
| `{}`
| Additional labels for the Prometheus ServiceMonitor resource.

| `metrics.serviceMonitor.annotations`
| object
| `{}`
| Annotations for the Prometheus ServiceMonitor resource.

| `metrics.serviceMonitor.enabled`
| bool
| `false`
| Setting that allows the creation of a Prometheus ServiceMonitor resource for Longhorn Manager components.

| `metrics.serviceMonitor.interval`
| string
| `""`
| Interval at which Prometheus scrapes the metrics from the target.

| `metrics.serviceMonitor.metricRelabelings`
| list
| `[]`
| Configures the relabeling rules to apply to the samples before ingestion. See the https://prometheus-operator.dev/docs/api-reference/api/#monitoring.coreos.com/v1.Endpoint[Prometheus Operator  documentation] for formatting details.

| `metrics.serviceMonitor.relabelings`
| list
| `[]`
| Configures the relabeling rules to apply the target's metadata labels. See the https://prometheus-operator.dev/docs/api-reference/api/#monitoring.coreos.com/v1.Endpoint[Prometheus Operator  documentation] for formatting details.

| `metrics.serviceMonitor.scrapeTimeout`
| string
| `""`
| Timeout after which Prometheus considers the scrape to be failed.
|===

=== OS/Kubernetes Distro Settings

==== OpenShift Settings

For more details, see the https://github.com/longhorn/longhorn/blob/master/chart/ocp-readme.md[ocp-readme].

|===
| Key | Type | Default | Description

| `openshift.enabled`
| bool
| `false`
| Setting that allows {longhorn-product-name} to integrate with OpenShift.

| `openshift.ui.port`
| int
| `443`
| Port for accessing the OpenShift web console.

| `openshift.ui.proxy`
| int
| `8443`
| Port for proxy that provides access to the OpenShift web console.

| `openshift.ui.route`
| string
| `"longhorn-ui"`
| Route for connections between {longhorn-product-name} and the OpenShift web console.
|===

=== Other Settings

|===
| Key | Default | Description

| `annotations`
| `{}`
| Annotation for the Longhorn Manager DaemonSet pods. This setting is optional.

| `defaultBackupStore`
| `{"backupTarget":null,"backupTargetCredentialSecret":null,"pollInterval":null}`
| Setting that allows you to update the default backupstore.

| `defaultBackupStore.backupTarget`
| `nil`
| Endpoint used to access the default backupstore. (Options: "NFS", "CIFS", "AWS", "GCP", "AZURE")

| `defaultBackupStore.backupTargetCredentialSecret`
| `nil`
| Name of the Kubernetes secret associated with the default backup target.

| `defaultBackupStore.pollInterval`
| `nil`
| Number of seconds that {longhorn-product-name} waits before checking the default backupstore for new backups. The default value is "300". When the value is "0", polling is disabled.

| `enableGoCoverDir`
| `false`
| Setting that allows {longhorn-product-name} to generate code coverage profiles.

| `enablePSP`
| `false`
| Setting that allows you to enable pod security policies (PSPs) that allow privileged {longhorn-product-name} pods to start. This setting applies only to clusters running Kubernetes 1.25 and earlier, and with the built-in Pod Security admission controller enabled.

| `extraObjects`
| `[]`
| Add extra objects manifests.

| `namespaceOverride`
| `""`
| Specify override namespace, specifically this is useful for using longhorn as sub-chart and its release namespace is not the `longhorn-system`.

| `preUpgradeChecker.jobEnabled`
| `true`
| Setting that allows {longhorn-product-name} to perform pre-upgrade checks. Disable this setting when installing {longhorn-product-name} using Argo CD or other GitOps solutions.

| `preUpgradeChecker.upgradeVersionCheck`
| `true`
| Setting that allows {longhorn-product-name} to perform upgrade version checks after starting the Longhorn Manager DaemonSet Pods. Disabling this setting also disables `preUpgradeChecker.jobEnabled`. {longhorn-product-name} recommends keeping this setting enabled.
|===

=== System Default Settings

During installation, you can either allow {longhorn-product-name} to use the default system settings or use specific flags to modify the default values. After installation, you can modify the settings using the {longhorn-product-name} UI. For more information, see the *Settings Reference* section of the xref:longhorn-documentation.adoc[documentation].

|===
| Key | Description

| `defaultSettings.allowCollectingLonghornUsageMetrics`
| Setting that allows {longhorn-product-name} to periodically collect anonymous usage data for product improvement purposes. {longhorn-product-name} sends collected data to the https://github.com/longhorn/upgrade-responder[Upgrade Responder] server, which is the data source of the Longhorn Public Metrics Dashboard (https://metrics.longhorn.io). The Upgrade Responder server does not store data that can be used to identify clients, including IP addresses.

| `defaultSettings.allowEmptyDiskSelectorVolume`
| Setting that allows scheduling of empty disk selector volumes to any disk.

| `defaultSettings.allowEmptyNodeSelectorVolume`
| Setting that allows scheduling of empty node selector volumes to any node.

| `defaultSettings.allowRecurringJobWhileVolumeDetached`
| Setting that allows {longhorn-product-name} to automatically attach a volume and create snapshots or backups when recurring jobs are run.

| `defaultSettings.allowVolumeCreationWithDegradedAvailability`
| Setting that allows you to create and attach a volume without having all replicas scheduled at the time of creation.

| `defaultSettings.autoCleanupRecurringJobBackupSnapshot`
| Setting that allows {longhorn-product-name} to automatically clean up the snapshot generated by a recurring backup job.

| `defaultSettings.autoCleanupSnapshotAfterOnDemandBackupCompleted`
| Setting that automatically cleans up the snapshot after the on-demand backup is completed.

| `defaultSettings.autoCleanupSnapshotWhenDeleteBackup`
| Setting that automatically cleans up the snapshot when the backup is deleted.

| `defaultSettings.autoCleanupSystemGeneratedSnapshot`
| Setting that allows {longhorn-product-name} to automatically clean up the system-generated snapshot after replica rebuilding is completed.

| `defaultSettings.autoDeletePodWhenVolumeDetachedUnexpectedly`
| Setting that allows {longhorn-product-name} to automatically delete a workload pod that is managed by a controller (for example, daemonset) whenever a Longhorn volume is detached unexpectedly (for example, during Kubernetes upgrades). After deletion, the controller restarts the pod and then Kubernetes handles volume reattachment and remounting.

| `defaultSettings.autoSalvage`
| Setting that allows {longhorn-product-name} to automatically salvage volumes when all replicas become faulty (for example, when the network connection is interrupted). {longhorn-product-name} determines which replicas are usable and then uses these replicas for the volume. This setting is enabled by default.

| `defaultSettings.backingImageCleanupWaitInterval`
| Number of minutes that {longhorn-product-name} waits before cleaning up the backing image file when no replicas in the disk are using it.

| `defaultSettings.backingImageRecoveryWaitInterval`
| Number of seconds that {longhorn-product-name} waits before downloading a backing image file again when the status of all image disk files changes to "failed" or "unknown".

| `defaultSettings.backupCompressionMethod`
| Setting that allows you to specify a backup compression method.

| `defaultSettings.backupConcurrentLimit`
| Maximum number of worker threads that can concurrently run for each backup.

| `defaultSettings.backupExecutionTimeout`
| Number of minutes that Longhorn allows for the backup execution. The default value is `"1"`.

| `defaultSettings.blacklistForAutoDeletePodWhenVolumeDetachedUnexpectedly`
| Blacklist of controller api/kind values for the setting Automatically Delete Workload Pod when the Volume Is Detached Unexpectedly. If a workload pod is managed by a controller whose api/kind is listed in this blacklist, Longhorn will not automatically delete the pod when its volume is unexpectedly detached. Multiple controller api/kind entries can be specified, separated by semicolons. For example: `apps/StatefulSet;apps/DaemonSet`. *Note* that the controller api/kind is case sensitive and must exactly match the api/kind in the workload pod's owner reference.

| `defaultSettings.concurrentAutomaticEngineUpgradePerNodeLimit`
| Maximum number of engines that are allowed to concurrently upgrade on each node after Longhorn Manager is upgraded. When the value is "0", {longhorn-product-name} does not automatically upgrade volume engines to the new default engine image version.

| `defaultSettings.concurrentReplicaRebuildPerNodeLimit`
| Maximum number of replicas that can be concurrently rebuilt on each node.

| `defaultSettings.concurrentVolumeBackupRestorePerNodeLimit`
| Maximum number of volumes that can be concurrently restored on each node using a backup. When the value is "0", restoration of volumes using a backup is disabled.

| `defaultSettings.createDefaultDiskLabeledNodes`
| Setting that allows {longhorn-product-name} to automatically create a default disk only on nodes with the label "node.longhorn.io/create-default-disk=true" (if no other disks exist). When this setting is disabled, {longhorn-product-name} creates a default disk on each node that is added to the cluster.

| `defaultSettings.csiAllowedTopologyKeys`
| Comma-separated list of topology keys that the {longhorn-product-name} CSI driver is allowed to pass through. When empty (default), no topology keys are passed through, and PVs will have no nodeAffinity. When configured (for example, `"topology.kubernetes.io/zone,topology.kubernetes.io/region"`), only the specified keys are kept in topology segments. All other keys are filtered out from both `CreateVolumeResponse.AccessibleTopology` and `NodeGetInfo` topology.

| `defaultSettings.csiStorageCapacityTracking`
| Setting that controls CSI storage capacity tracking, which allows the kube-scheduler to filter nodes that cannot fit the requested volume.

| `defaultSettings.dataEngineCPUMask`
| Applies only to the V2 Data Engine. Specifies the CPU cores on which the Storage Performance Development Kit (SPDK) target daemon runs. The daemon is deployed in each Instance Manager pod. Ensure that the number of assigned cores does not exceed the guaranteed Instance Manager CPUs for the V2 Data Engine. The default value is `{"v2":"0x1"}`.

| `defaultSettings.dataEngineHugepageEnabled`
| Applies only to the V2 Data Engine. Enables hugepages for the Storage Performance Development Kit (SPDK) target daemon. If disabled, legacy memory is used. Allocation size is set via the Data Engine Memory Size setting.

| `defaultSettings.dataEngineLogFlags`
| Applies only to the V2 Data Engine. Specifies the log flags for the Storage Performance Development Kit (SPDK) target daemon.

| `defaultSettings.dataEngineLogLevel`
| Applies only to the V2 Data Engine. Specifies the log level for the Storage Performance Development Kit (SPDK) target daemon. Supported values are: `Error`, `Warning`, `Notice`, `Info`, and `Debug`. The default is `Notice`.

| `defaultSettings.dataEngineMemorySize`
| Applies only to the V2 Data Engine. Specifies the hugepage size, in MiB, for the Storage Performance Development Kit (SPDK) target daemon. The default value is "{"v2":"2048"}"

| `defaultSettings.defaultBackupBlockSize`
| Specifies the default backup block size, in MiB, used when creating a new volume. Supported values are 2 or 16.

| `defaultSettings.defaultDataLocality`
| Default data locality. A Longhorn volume has data locality if a local replica of the volume exists on the same node as the pod that is using the volume.

| `defaultSettings.defaultDataPath`
| Default path to use for storing data on a host. An absolute directory path indicates a filesystem-type disk used by the V1 Data Engine, while a path to a block device indicates a block-type disk used by the V2 Data Engine. The default value is `"/var/lib/longhorn/"`.

| `defaultSettings.defaultLonghornStaticStorageClass`
| Default name of {longhorn-product-name} static StorageClass. `"storageClassName"` is assigned to PVs and PVCs that are created for an existing Longhorn volume. `"storageClassName"` can also be used as a label, so it is possible to use a Longhorn StorageClass to bind a workload to an existing PV without creating a Kubernetes StorageClass object. `"storageClassName"` needs to be an existing StorageClass. The default value is "longhorn-static".

| `defaultSettings.defaultReplicaCount`
| Default number of replicas for volumes created using the {longhorn-product-name} UI. For Kubernetes configuration, modify the `numberOfReplicas` field in the StorageClass. The default value is `"{"v1":"3","v2":"3"}"`.

| `defaultSettings.defaultUblkNumberOfQueue`
| This setting specifies the default the number of queues for ublk frontend. This setting applies to volumes using the V2 Data Engine with Ublk front end. Individual volumes can override this setting by specifying their own number of queues for ublk.

| `defaultSettings.defaultUblkQueueDepth`
| This setting specifies the default depth of each queue for Ublk frontend. This setting applies to volumes using the V2 Data Engine with Ublk front end. Individual volumes can override this setting by specifying their own Ublk queue depth.

| `defaultSettings.deletingConfirmationFlag`
| Flag that prevents accidental uninstallation of {longhorn-product-name}.

| `defaultSettings.detachManuallyAttachedVolumesWhenCordoned`
| Setting that allows automatic detaching of manually attached volumes when a node is cordoned.

| `defaultSettings.disableRevisionCounter`
| Setting that disables the revision counter and thereby prevents {longhorn-product-name} from tracking all write operations to a volume. When salvaging a volume, {longhorn-product-name} uses properties of the `"volume-head-xxx.img"` file (the last file size and the last time the file was modified) to select the replica to be used for volume recovery. This setting applies only to volumes created using the {longhorn-product-name} UI.

| `defaultSettings.disableSchedulingOnCordonedNode`
| Setting that prevents Longhorn Manager from scheduling replicas on a cordoned Kubernetes node. This setting is enabled by default.

| `defaultSettings.disableSnapshotPurge`
| Setting that temporarily prevents all attempts to purge volume snapshots.

| `defaultSettings.endpointNetworkForRWXVolume`
| Specifies a dedicated network for mounting RWX (ReadWriteMany) volumes. Leave this blank to use the default Kubernetes cluster network. *Caution*: This setting should change after all RWX volumes are detached because some Longhorn component pods must be recreated to apply the setting. You cannot modify this setting while RWX volumes are still attached.

| `defaultSettings.engineReplicaTimeout`
| Timeout between the Longhorn Engine and replicas. Specify a value between `"8"` and `"30"` seconds. The default value is `"8"`.

| `defaultSettings.failedBackupTTL`
| Number of minutes that {longhorn-product-name} keeps a failed backup resource. When the value is `"0"`, automatic deletion is disabled.

| `defaultSettings.fastReplicaRebuildEnabled`
| Setting that allows fast rebuilding of replicas using the checksum of snapshot disk files. Before enabling this setting, you must set the snapshot-data-integrity value to `"enable"` or `"fast-check"`.

| `defaultSettings.freezeFilesystemForSnapshot`
| Setting that freezes the file system on the root partition before a snapshot is created.

| `defaultSettings.guaranteedInstanceManagerCPU`
| Percentage of the total allocatable CPU resources on each node to be reserved for each instance manager pod. The default value is {"v1":"12","v2":"12"}.

| `defaultSettings.instanceManagerPodLivenessProbeTimeout`
| In seconds. The setting specifies the timeout for the instance manager pod liveness probe. The default value is 10 seconds.

| `defaultSettings.kubernetesClusterAutoscalerEnabled`
| Setting that notifies {longhorn-product-name} that the cluster is using the Kubernetes Cluster Autoscaler.

| `defaultSettings.logLevel`
| Log levels that indicate the type and severity of logs in Longhorn Manager. The default value is `"Info"`. (Options: `"Panic"`, `"Fatal"`, `"Error"`, `"Warn"`, `"Info"`, `"Debug"`, `"Trace"`)

| `defaultSettings.logPath`
| Specifies the directory on the host where Longhorn stores log files for the instance manager pod. Currently, it is only used for instance manager pods in the v2 data engine.

| `defaultSettings.longGRPCTimeOut`
| Number of seconds that {longhorn-product-name} allows for the completion of replica rebuilding and snapshot cloning operations.

| `defaultSettings.managerUrl`
| The external URL used to access the Longhorn Manager API. When set, this URL is returned in API responses (the actions and links fields) instead of the internal pod IP. This is useful when accessing the API through Ingress or Gateway API HTTPRoute. Format: `scheme://host[:port]` (for example, `pass:[https://longhorn.example.com]` or `pass:[https://longhorn.example.com:8443]`). Leave it empty to use the default behavior.

| `defaultSettings.nodeDiskHealthMonitoring`
| Controls whether Longhorn monitors and records health information for node disks. When disabled, disk health checks and status updates are skipped.

| `defaultSettings.nodeDownPodDeletionPolicy`
| Policy that defines the action {longhorn-product-name} takes when a volume is stuck with a StatefulSet or Deployment pod on a node that failed.

| `defaultSettings.nodeDrainPolicy`
| Policy that defines the action {longhorn-product-name} takes when a node with the last healthy replica of a volume is drained.

| `defaultSettings.offlineReplicaRebuilding`
| Enables automatic rebuilding of degraded replicas while the volume is detached. This setting only takes effect if the individual volume setting is set to `"ignored"` or `"enabled"`.

| `defaultSettings.orphanResourceAutoDeletion`
| Enables Longhorn to automatically delete orphaned resources and their associated data or processes (e.g., stale replicas). Orphaned resources on failed or unknown nodes are not automatically cleaned up. You need to specify the resource types to be deleted using a semicolon-separated list (e.g., `replica-data;instance`). Available items are: `replica-data`, `instance`.

| `defaultSettings.orphanResourceAutoDeletionGracePeriod`
| Specifies the wait time, in seconds, before Longhorn automatically deletes an orphaned Custom Resource (CR) and its associated resources. Note that if a user manually deletes an orphaned CR, the deletion occurs immediately and does not respect this grace period.

| `defaultSettings.priorityClass`
| PriorityClass for system-managed Longhorn components. This setting can help prevent Longhorn components from being evicted under Node Pressure. Notice that this is applied to {longhorn-product-name} user-deployed components by default if there are no priority class values set yet, such as `longhornManager.priorityClass`.

| `defaultSettings.rebuildConcurrentSyncLimit` 
| Maximum number of file synchronization operations that can run concurrently during a single replica rebuild. Right now, it's for v1 data engine only.

| `defaultSettings.recurringFailedJobsHistoryLimit`
| Maximum number of failed recurring backup and snapshot jobs to be retained. When the value is `"0"`, a history of failed recurring jobs is not retained.

| `defaultSettings.recurringJobMaxRetention`
| Maximum number of snapshots or backups to be retained.

| `defaultSettings.recurringSuccessfulJobsHistoryLimit`
| Maximum number of successful recurring backup and snapshot jobs to be retained. When the value is `"0"`, a history of successful recurring jobs is not retained.

| `defaultSettings.removeSnapshotsDuringFilesystemTrim`
| Setting that allows {longhorn-product-name} to automatically mark the latest snapshot and its parent files as removed during a file system trim. {longhorn-product-name} does not remove snapshots containing multiple child files.

| `defaultSettings.replicaAutoBalance`
| Setting that automatically re-balances replicas when an available node is discovered.

| `defaultSettings.replicaDiskSoftAntiAffinity`
| Setting that allows scheduling on disks with existing healthy replicas of the same volume. This setting is enabled by default.

| `defaultSettings.replicaFileSyncHttpClientTimeout`
| Number of seconds that an HTTP client waits for a response from a File Sync server before considering the connection to have failed.

| `defaultSettings.replicaRebuildingBandwidthLimit`
| This setting specifies the default write bandwidth limit (in megabytes per second) for volume replica rebuilding when using the v2 data engine (SPDK). If this value is set to 0, there will be no write bandwidth limitation. Individual volumes can override this setting by specifying their own rebuilding bandwidth limit.

| `defaultSettings.replicaReplenishmentWaitInterval`
| Number of seconds that {longhorn-product-name} waits before reusing existing data on a failed replica instead of creating a new replica of a degraded volume.

| `defaultSettings.replicaSoftAntiAffinity`
| Setting that allows scheduling on nodes with healthy replicas of the same volume. This setting is disabled by default.

| `defaultSettings.replicaZoneSoftAntiAffinity`
| Setting that allows {longhorn-product-name} to schedule new replicas of a volume to nodes in the same zone as existing healthy replicas. Nodes that do not belong to any zone are treated as existing in the zone that contains healthy replicas. When identifying zones, {longhorn-product-name} relies on the label "topology.kubernetes.io/zone=+++<Zone name="" of="" the="" node="">+++" in the Kubernetes node object.+++</Zone>+++

| `defaultSettings.restoreConcurrentLimit`
| Maximum number of worker threads that can concurrently run for each restore operation.

| `defaultSettings.restoreVolumeRecurringJobs`
| Setting that restores recurring jobs from a backup volume on a backup target and creates recurring jobs if none exist during backup restoration.

| `defaultSettings.rwxVolumeFastFailover`
| Setting that allows Longhorn to detect node failure and immediately migrate affected RWX volumes.

| `defaultSettings.snapshotDataIntegrity`
| Setting that allows you to enable and disable snapshot hashing and data integrity checks.

| `defaultSettings.snapshotDataIntegrityCronjob`
| Setting that defines when {longhorn-product-name} checks the integrity of data in snapshot disk files. You must use the Unix cron expression format.

| `defaultSettings.snapshotDataIntegrityImmediateCheckAfterSnapshotCreation`
| Setting that allows disabling of snapshot hashing after snapshot creation to minimize impact on system performance.

| `defaultSettings.snapshotHeavyTaskConcurrentLimit`
| Setting that controls how many snapshot heavy task operations (such as purge and clone) can run concurrently per node. This is a best-effort mechanism: due to the distributed nature of the system, temporary oversubscription may occur. The limiter reduces worst-case overload but does not guarantee perfect enforcement.

| `defaultSettings.snapshotMaxCount`
| Maximum snapshot count for a volume. The value should be between 2 to 250

| `defaultSettings.storageMinimalAvailablePercentage`
| Percentage of minimum available disk capacity. When the minimum available capacity exceeds the total available capacity, the disk becomes unschedulable until more space is made available for use. The default value is `"25"`.

| `defaultSettings.storageNetwork`
| Storage network for in-cluster traffic. When unspecified, {longhorn-product-name} uses the Kubernetes cluster network.

| `defaultSettings.storageOverProvisioningPercentage`
| Percentage of storage that can be allocated relative to hard drive capacity. The default value is `"100"`.

| `defaultSettings.storageReservedPercentageForDefaultDisk`
| Percentage of disk space that is not allocated to the default disk on each new Longhorn node.

| `defaultSettings.supportBundleFailedHistoryLimit`
| Maximum number of failed support bundles that can exist in the cluster. When the value is "0", {longhorn-product-name} automatically purges all failed support bundles.

| `defaultSettings.systemManagedCSIComponentsResourceLimits`
| Resource limits for system-managed CSI components. This setting allows you to configure CPU and memory requests/limits for CSI attacher, provisioner, resizer, snapshotter, and plugin components. Supported components: `csi-attacher`, `csi-provisioner`, `csi-resizer`, `csi-snapshotter`, `longhorn-csi-plugin`, `node-driver-registrar`, `longhorn-liveness-probe`. Notice that changing resource limits will cause CSI components to restart, which may temporarily affect volume provisioning and attach/detach operations until the components are ready. The value should be a JSON object with component names as keys and ResourceRequirements as values.

| `defaultSettings.systemManagedComponentsNodeSelector`
| Node selector for system-managed Longhorn components.

| `defaultSettings.systemManagedPodsImagePullPolicy`
| Image pull policy for system-managed pods, such as Instance Manager, engine images, and CSI Driver. Changes to the image pull policy are applied only after the system-managed pods restart.

| `defaultSettings.taintToleration`
| Taint or toleration for system-managed Longhorn components. Specify values using a semicolon-separated list in `kubectl taint` syntax (Example: key1=value1:effect; key2=value2:effect).

| `defaultSettings.upgradeChecker`
| Upgrade Checker that periodically checks for new {longhorn-product-name} versions. When a new version is available, a notification appears on the {longhorn-product-name} UI. This setting is enabled by default.

| `defaultSettings.upgradeResponderURL`
| The Upgrade Responder sends a notification whenever a new Longhorn version that you can upgrade to becomes available. The default value is `pass:[https://longhorn-upgrade-responder.rancher.io/v1/checkupgrade]`.

| `defaultSettings.v1DataEngine`
| Setting that allows you to enable the V1 Data Engine.

| `defaultSettings.v2DataEngine`
| Setting that allows you to enable the V2 Data Engine, which is based on the Storage Performance Development Kit (SPDK). The V2 Data Engine is an experimental feature and should not be used in production environments.
|===
